# fast-crewai

./: .gitignore  BENCHMARK.md  CLAUDE.md  COMPATIBILITY.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  PYPI_PREPARE.md  README.md  __init__.py  build_and_test.sh  conftest.py  pyproject.toml  pytest.ini  run_tests.py  setup.cfg  setup.py  test_all_components.py  test_all_patches.py  test_crewai_shim.py  test_integration.py  test_package.py  test_shim.py
.github/workflows/: ci.yml  compatibility-tests.yml  publish.yml  tests.yml
benchmark_test/: benchmark_runner.py
crewai_comparison_test/: accelerated_avg_time.txt  baseline_avg_time.txt  comparison_results.json  crewai_test_workflow.py
crewai_rust/: README.md  __init__.py  __main__.py  benchmark.py  bootstrap.py  database.py  example_usage.py  integration.py  memory.py  migration_guide.md  pyproject.toml  run_compatibility_tests.py  serialization.py  setup.py  shim.py  tasks.py  test_backward_compatibility.py  test_compatibility_report.py  test_comprehensive.py  test_drop_in_replacement.py  test_example_usage.py  test_seamless_integration.py  tools.py  utils.py
docs/: ACCELERATION.md  API_REFERENCE.md  ARCHITECTURE.md  COMPATIBILITY.md  CONFIGURATION.md  CONFIGURATION.md.fixed  DEVELOPMENT.md  INSTALLATION.md  MIGRATION.md  PERFORMANCE.md  QUICKSTART.md  QUICK_START.md  README.md  STRUCTURE.md  SUMMARY.md  TESTING.md  TROUBLESHOOTING.md  rust_concurrency_framework.md  rust_integration_compatibility_summary.md  rust_integration_final_summary.md  rust_integration_summary.md  rust_memory_optimization_plan.md  rust_optimization_master_plan.md  rust_optimization_summary.md  rust_roadmap.md  rust_serialization_plan.md  rust_sqlite_wrapper.md  rust_tool_execution_engine.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/api/: database.md  index.md  memory.md  serialization.md  tasks.md  tools.md  utilities.md
documentation/docs/contributing/: architecture.md  development.md  troubleshooting.md
documentation/docs/getting-started/: how-it-works.md  installation.md  quickstart.md
documentation/docs/user-guide/: configuration.md  database.md  memory.md  performance.md  serialization.md  tasks.md  tools.md
examples/: README.md  basic_usage.py  memory_acceleration.py  memory_replacement_example.py  migration_guide.md  performance_benchmark.py  serialization_example.py  task_execution_example.py  test_rust_integration.py  tool_execution_example.py  tool_optimization.py
fast_crewai/: __init__.py  __main__.py  _constants.py  benchmark.py  bootstrap.py  database.py  integration.py  memory.py  serialization.py  shim.py  tasks.py  tools.py  utils.py
scripts/: README.md  build_and_test.sh  run_tests.sh  test_benchmarking.py  test_benchmarking.sh  test_crewai_comparison.py  test_crewai_comparison.sh  test_crewai_compatibility.py  test_crewai_compatibility.sh
src/: lib.rs
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_all_patches.py  test_backward_compatibility.py  test_compatibility_report.py  test_comprehensive.py  test_integration.py  test_memory.py  test_package_import.py  test_shim.py  test_tasks.py  test_tools.py
