[package]
name = "fast-crewai"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_crewai"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
rusqlite = { version = "0.26.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.19.0"

[dependencies.pyo3-log]
version = "0.12"

[features]
extension-module = ["pyo3/extension-module"]