[package]
name = "fast-crewai"
version = "0.1.5"
edition = "2021"
description = "Drop-in Rust acceleration for CrewAI."
license = "MIT"
authors = ["Neul Labs <contact@neullabs.com>"]
homepage = "https://fast-crewai.neullabs.com"
repository = "https://github.com/neul-labs/fast-crewai"
documentation = "https://docs.neullabs.com/fast-crewai"
readme = "README.md"
keywords = ["crewai", "agents", "ai", "performance", "rust"]

[lib]
name = "fast_crewai"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33.0"

[dependencies.pyo3-log]
version = "0.12"

[features]
extension-module = ["pyo3/extension-module"]
