[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "crewai-rust"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "High-performance Rust implementations for CrewAI components"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "CrewAI", email = "info@crewai.com" },
]
keywords = ["crewai", "rust", "performance", "ai", "agents"]

[project.scripts]
crewai-rust = "crewai_rust.__main__:main"

[project.urls]
Homepage = "https://github.com/crewAI/crewai"
Documentation = "https://github.com/crewAI/crewai/blob/main/docs/crewai-rust/README.md"
Repository = "https://github.com/crewAI/crewai"
"Bug Tracker" = "https://github.com/crewAI/crewai/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "crewai_rust._core"

[tool.maturin.targets]
crewai_rust = { path = "src/lib.rs" }