[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast-crewai"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
description = "High-performance acceleration for CrewAI - 2-5x faster memory, tools, and task execution with zero code changes"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "CrewAI", email = "info@crewai.com" },
]
keywords = ["crewai", "acceleration", "performance", "ai", "agents", "optimization"]
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-html>=3.1.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
    "mock>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
fast-crewai = "fast_crewai.__main__:main"
fast-crewai-bootstrap = "fast_crewai.bootstrap:main"

[project.urls]
Homepage = "https://github.com/neul-labs/fast-crewai"
Documentation = "https://github.com/neul-labs/fast-crewai/blob/main/docs/README.md"
Repository = "https://github.com/neul-labs/fast-crewai"
"Bug Tracker" = "https://github.com/neul-labs/fast-crewai/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "fast_crewai._core"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
]
# Exclude test_compatibility directory (cloned CrewAI repo for compatibility testing)
addopts = "--ignore=test_compatibility"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.uv]
dev-dependencies = [
    "maturin>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-html>=3.1.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
    "mock>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]