[metadata]
name = crewai-rust
version = attr: crewai_rust.__version__
author = CrewAI
author_email = info@crewai.com
description = High-performance Rust implementations for CrewAI components - requires explicit usage, does not automatically replace standard components
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crewAI/crewai
project_urls =
    Bug Tracker = https://github.com/crewAI/crewai/issues
    Documentation = https://github.com/crewAI/crewai/blob/main/docs/crewai-rust/README.md
    Source Code = https://github.com/crewAI/crewai
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Rust

[options]
package_dir =
packages = find:
python_requires = >=3.8

[options.packages.find]
where = 

[options.entry_points]
console_scripts =
    crewai-rust = crewai_rust.__main__:main
    crewai-rust-bootstrap = crewai_rust.bootstrap:main