[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-rust"
dynamic = ["version"]
description = "High-performance Rust implementations for CrewAI components"
readme = "README.md"
authors = [
    {name = "CrewAI", email = "info@crewai.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=6.0",
    "pytest-asyncio>=0.14.0",
]

[project.scripts]
crewai-rust = "crewai_rust.__main__:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"